[gd_scene load_steps=4 format=3 uid="uid://b8fg45slly116"]

[ext_resource type="Texture2D" uid="uid://cwdw0dy41qgvt" path="res://ui/menus/tree_card.png" id="1_wbhwn"]
[ext_resource type="Script" uid="uid://dxwbpi670nhxn" path="res://ui/menus/tree_card.gd" id="2_hkimi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hkimi"]
atlas = ExtResource("1_wbhwn")
region = Rect2(48, 32, 96, 124)

[node name="TreeCard" type="TextureButton"]
offset_right = 96.0
offset_bottom = 124.0
texture_normal = SubResource("AtlasTexture_hkimi")
script = ExtResource("2_hkimi")

[node name="WaterPlus" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 77.0
offset_right = 42.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SunPlus" type="Label" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 77.0
offset_right = 67.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NutrientsPlus" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 77.0
offset_right = 92.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaterMin" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 90.0
offset_right = 42.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SunMin" type="Label" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 90.0
offset_right = 67.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NutrientsMin" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 90.0
offset_right = 92.0
offset_bottom = 102.0
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Species" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 107.0
offset_right = 92.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 8
text = "species"
horizontal_alignment = 1
vertical_alignment = 1
